# ksmaircontrol-rs

./: .gitignore  App.module.css  README.md  index.html  package-lock.json  package.json  variables.css  vite.config.js
ksmencoder/: CMakeLists.txt  build.bat
ksmencoder/src/: audio.cpp  audio.h  chatbot.cpp  chatbot.h  encoder.cpp  encoder.h  gui.cpp  gui.h  main.cpp  metadata.cpp  metadata.h
scripts/: bump-version.js
src/: App.jsx  App.module.css
src/components/AdScheduler/: AdScheduler.jsx  AdScheduler.module.css
src/components/Cartwall/: Cartwall.jsx  Cartwall.module.css
src/components/CircularVumeter/: CircularVumeter.jsx  CircularVumeter.module.css
src/components/CognitiveWidget/: CognitiveWidget.jsx  CognitiveWidget.module.css
src/components/CommandCenter/: CommandCenter.jsx  CommandCenter.module.css
src/components/ConfigPanel/: ConfigPanel.jsx  ConfigPanel.module.css
src/components/CrossfadeConfig/: CrossfadeConfig.jsx  CrossfadeConfig.module.css
src/components/Header/: Header.jsx  Header.module.css
src/components/LicenseOverlay/: LicenseOverlay.jsx  LicenseOverlay.module.css
src/components/LicenseScreen/: LicenseScreen.jsx  LicenseScreen.module.css
src/components/MainPlayer/: MainPlayer.jsx  MainPlayer.module.css
src/components/Mixer/: Mixer.jsx  Mixer.module.css
src/components/NativeMonitor/: NativeMonitor.jsx  NativeMonitor.module.css
src/components/OutputProcessor/: OutputProcessor.jsx  OutputProcessor.module.css
src/components/PlayerDecks/: PlayerDecks.jsx  PlayerDecks.module.css
src/components/Playlist/: Playlist.jsx  Playlist.module.css
src/components/Sidebar/: Sidebar.jsx  Sidebar.module.css
src/components/SilenceDetector/: SilenceDetector.jsx
src/components/TrackTool/: TrackTool.jsx  TrackTool.module.css
src/components/WindowPortal/: WindowPortal.jsx
src/main/: database.js  library_db.cjs  library_scanner.js  license.cjs  license.js  main.js  preload.js  sqlite_db.js
src/main/workers/: audio_analysis_worker.js  ksm_analysis_worker.cjs  (+1 more)
src/services/: AudioEngine.js  LibraryService.js  Scheduler.js  TelemetryService.js  WebRTCReceiver.js  license_checker.js
src/utils/: audioUrl.js
